--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="p-8">pading</div>
     </section>
 
-    <section class="mb-10">
+    <section class="">
       <h2>Sizing</h2>
       <div class="w-32 h-32">aku1</div>
       <div class="max-w-xs min-h-screen">aku 2</div>
@@ -61,5 +61,21 @@
         dolorum obcaecati recusandae non veniam mollitia alias!
       </p>
     </section>
+
+    <div class="max-w-xl h-96 bg-[#54BCA4] mx-auto overflow-y-scroll bg-fixed" style="background-image: url('https://source.unsplash.com/1000x600?computer')">
+      <p class="p-5 text-2xl">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione fugit sit temporibus quos cum suscipit obcaecati culpa est aperiam recusandae ullam voluptas, vero totam explicabo reprehenderit, quas distinctio aut eum unde
+        deleniti esse corporis minus ex? Minus sapiente et ab iste incidunt esse nemo soluta laborum veritatis debitis pariatur perspiciatis, commodi quibusdam aspernatur repellat, repellendus consequatur quae expedita. Explicabo unde
+        voluptate quod maiores, doloribus, nulla consequuntur molestias veniam repellendus laborum, autem architecto in earum! Impedit dolore similique fugiat odio adipisci voluptatum commodi beatae nisi exercitationem, eveniet corporis
+        aliquid, animi quas. Odit dolor, eum odio nisi explicabo, eligendi fugit minus facere iure alias cupiditate, nam deserunt molestias distinctio saepe error dicta aut. Architecto debitis error porro expedita numquam officia quibusdam
+        iusto quae dicta suscipit fugiat autem, eaque amet doloribus eius modi laboriosam repudiandae illum totam est beatae! Est repellat quasi quisquam, atque, saepe commodi provident officia, veniam aspernatur asperiores autem. Eos odit
+        alias autem iusto, suscipit aliquid soluta, officia numquam placeat tenetur architecto libero vero cupiditate non ratione. Omnis beatae, quas blanditiis veniam atque recusandae minus nam dolore ratione possimus tenetur. Assumenda ea
+        perferendis id esse sed alias voluptatibus omnis ab iure, quaerat maxime hic facere ratione ad atque! Voluptatibus, repellat.
+      </p>
+    </div>
+
+    <div class="mt-32 max-w-xl mx-auto h-96 bg-slate-300 bg-contain bg-no-repeat bg-center rounded-2xl border-8 border-slate-400 border-dashed border-2" style="background-image: url('img/satu.jpg')"></div>
+
+    <div class="mb-96"></div>
   </body>
 </html>
